--- a/SITE FATEC/CSS/style.css
+++ b/SITE FATEC/CSS/style.css
@@ -1,174 +1,169 @@
-
 * {
-    box-sizing: border-box;
-}
-  
-@import url(https://fonts.googleapis.com/css?family=PT+Sans);
-  
-html, body {
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
 }
 
+@import url(https://fonts.googleapis.com/css?family=PT+Sans);
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 
 body {
-    font-family: 'PT Sans', Arial, Verdana;
-    background-color: white;
+  font-family: "PT Sans", Arial, Verdana;
+  background-color: white;
 }
-span{
-    font-size: 0.6em;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    letter-spacing: -2px;
+span {
+  font-size: 0.6em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  letter-spacing: -2px;
+  display: contents;
 }
 
-  .header {
-    box-sizing: content-box;
-    height: auto;
-    width: 40%;
-    text-align: center;
-    margin-left: 25%;
-    font-size: 2.4em;
-    padding: 02%;
-    position: relative;
-    color:#2c3e50;
+.header {
+  box-sizing: content-box;
+  height: auto;
+  text-align: center;
+  margin: 0% 0% 0 25%;
+  font-size: 2.4em;
+  padding: 02%;
+  position: relative;
+  color: #2c3e50;
 }
-  #image {
-    float: left;
-    width: 23%;
-    height: auto;
-    padding: 02%;
-
-} 
+.head {
+  display: inline;
+}
+#image {
+  float: left;
+  width: 23%;
+  height: auto;
+  padding: 02%;
+}
 .aviso {
-    font-size: 2.0em;
-    width: 25%;
-    height: 30%;
-    float: right;
-    position: fixed;
-    text-align: center;
-    margin: 0 0 0 80%;
+  font-size: 2em;
+  width: 25%;
+  height: 30%;
+  float: right;
+  /* position: fixed; */
+  text-align: center;
 }
-.menu-item{
-    margin: 0 04% 0 0;
-    float: left;
-    width: 15%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.menu-item {
+  margin: 0 04% 0 0;
+  float: left;
+  width: 15%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
-.menu1{
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    width: 100%;
-    height: 80px;
-    margin: 05% 0 0 0;
-    position: relative;
-    background-color: #2c3e50;
-    z-index: 7;
-    float: none;
-}  
+.menu1 {
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  width: 100%;
+  height: 80px;
+  margin: 05% 0 0 0;
+  position: relative;
+  background-color: #2c3e50;
+  z-index: 7;
+  float: none;
+}
 
-    
-a{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    text-decoration: none;
-    position: relative;
-    font-size: 1.8em;
-    z-index: 9;
+a {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  font-size: 1.8em;
+  z-index: 9;
 }
 
 a:active {
-background-color: #638db9;
-
-
+  background-color: #638db9;
 }
 a:before {
-background-color: #2c3e50;
+  background-color: #2c3e50;
 
-opacity: 0.8;
+  opacity: 0.8;
 }
 
-h2 #head{
-    font-size: 2.5em;
-    margin: 0.1em;
-
+h2 #head {
+  font-size: 2.5em;
+  margin: 0.1em;
 }
 
-h3 #head{
-    font-size: 1.5em;  
-    margin: 0em;
+h3 #head {
+  font-size: 1.5em;
+  margin: 0em;
 }
 
 .menu {
-    padding: 05px;
-    width: 40%;
-    margin: 02% 0 02px 02%;
-    border-style: double;
-    text-align: center;
-    float: left;
-    width: 40%;
-    color: lightgoldenrodyellow;
-    background-color: rgb(4, 14, 49);
+  padding: 05px;
+  width: 40%;
+  margin: 02% 0 02px 02%;
+  border-style: double;
+  text-align: center;
+  float: left;
+  width: 40%;
+  color: lightgoldenrodyellow;
+  background-color: rgb(4, 14, 49);
 }
 .menu-grupos {
-    padding: 05px;
-    width: 40%;
-    margin: 02% 0 03% 0;
-    border-style: double;
-    text-align: center;
-    width: 40%;
-    color: lightgoldenrodyellow;
-    background-color: rgb(4, 14, 49);
-    float: right;
+  padding: 05px;
+  width: 40%;
+  margin: 02% 0 03% 0;
+  border-style: double;
+  text-align: center;
+  width: 40%;
+  color: lightgoldenrodyellow;
+  background-color: rgb(4, 14, 49);
+  float: right;
 }
 .menuitem {
-    padding: 05px;
-    margin: 02% 02% 2px 2%;
-    border-radius: 20%;
-    border-bottom: 5px solid #00000017;
-    font-size: 1.2em;
-    background-color: khaki;
-    color: rgb(19, 18, 95);
-    
+  padding: 05px;
+  margin: 02% 02% 2px 2%;
+  border-radius: 20%;
+  border-bottom: 5px solid #00000017;
+  font-size: 1.2em;
+  background-color: khaki;
+  color: rgb(19, 18, 95);
 }
-.main{
-    margin: 02% 02% 0 0;
-    float:right;
-    width: 40%;
-    height: auto;
-    padding: 01%;
-    overflow: hidden;
-    background-color: lemonchiffon;
-    border-radius: 2%;
-    text-align: center;
-    font: message-box;
-    box-shadow: black 05px;
+.main {
+  margin: 02% 02% 0 0;
+  float: right;
+  width: 40%;
+  height: auto;
+  padding: 01%;
+  overflow: hidden;
+  background-color: lemonchiffon;
+  border-radius: 2%;
+  text-align: center;
+  font: message-box;
+  box-shadow: black 05px;
 }
 
-.imgProjeto{
-    width: 25em;
-    height: auto;
-    float: left;
-    border:black 2px solid;
-    margin: 02% 10% 0 10%;
+.imgProjeto {
+  width: 25em;
+  height: auto;
+  float: left;
+  border: black 2px solid;
+  margin: 02% 10% 0 10%;
 }
-.imgGrupo{
-    border:black 2px solid;
-    float: left;
-    width: 30em;
-    height: auto;
-    margin: 02% 0 0 02%;
+.imgGrupo {
+  border: black 2px solid;
+  float: left;
+  width: 30em;
+  height: auto;
+  margin: 02% 0 0 02%;
 }
 .footer {
-    background-color: rgb(204, 197, 197);
-    padding: 02%;
-    margin-top: 30%;
-    text-align: center;
+  background-color: rgb(204, 197, 197);
+  padding: 02%;
+  margin-top: 30%;
+  text-align: center;
 }
